# spyglass

./: .dockerignore  .gitignore  .gitreview  .style.yapf  .zuul.yaml  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: cli.rst  conf.py  developer_quickstart.rst  docker_guide.rst  getting_started.rst  index.rst  tugboat.rst  yaml-editor.rst
images/spyglass/: Dockerfile  Dockerfile.opensuse_15  Dockerfile.ubuntu_bionic  Dockerfile.ubuntu_xenial
spyglass/: cli.py  exceptions.py  spyglass.py
spyglass/data_extractor/: base.py  custom_exceptions.py  models.py
spyglass/data_extractor/plugins/: formation.py
spyglass/examples/: SiteDesignSpec_v0.1.xlsx  excel_spec.yaml  site_config.yaml
spyglass/examples/templates/: site-definition.yaml.j2
spyglass/parser/: engine.py
spyglass/schemas/: data_schema.json
spyglass/site_processors/: base.py  site_processor.py
spyglass/utils/: utils.py
spyglass/utils/editor/: editor.py
spyglass/validators/: exceptions.py  json_validator.py  validator.py
tests/: conftest.py
tests/shared/: intermediary_schema.json  invalid_intermediary.yaml  rules.yaml  test_intermediary.yaml
tests/shared/templates/: site-definition.yaml.j2
tests/unit/: test_cli.py
tests/unit/data_extractor/: test_base.py  test_models.py
tests/unit/parser/: test_engine.py
tests/unit/site_processors/: test_site_processor.py
tests/unit/validators/: test_json_validator.py
tools/: image_tags.py  spyglass.sh
(+32 files in other folders)
