[metadata]
name = spyglass
version = 0.0.1
summary = Airship Manifest Generation
description = Tool to generate Airship documents from data sources
description-file = README.rst
author = The Airship Authors
author-email = airship-discuss@lists.airshipit.org
home-page = https://opendev.org/airship/spyglass
license = Apache-2
requires-python = >=3.5
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    spyglass

[entry_points]
console_scripts =
    spyglass = spyglass.cli:main
data_extractor_plugins =
    tugboat = spyglass.data_extractor.plugins.tugboat.tugboat:TugboatPlugin
    formation = spyglass.data_extractor.plugins.formation.formation:FormationPlugin

[yapf]
based_on_style = pep8
allow_split_before_dict_value = false
blank_line_before_nested_class_or_def = true
blank_line_before_module_docstring = true
split_before_logical_operator = false
split_before_first_argument = true
